--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
-pyasn1 == 0.4.1
-pandas-gbq==0.4.0
-oauth2client
-google-api-python-client
-google-cloud-storage
-pandas==0.19.2
-bs4
-scikit-learn==0.19.0
-six==1.10
-pybaseball
-pulp
+pydfs-lineup-optimizer
+pandas-gbq == 0.10.0
+pandas==0.24.2
 requests
