--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ pandas-gbq == 0.10.0
 pandas==0.24.2
 google-api-python-client
 google-cloud-storage
-sklearn == 0.20.3
+scikit-learn == 0.20.3
 requests
